# swayest_workstyle

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  default_config.toml  sworkstyle.man
.github/workflows/: release.yml
script/: release  release.py
src/: args.rs  config.rs  default_config.toml  lib.rs  main.rs  util.rs  version.rs
src/config/: config_error.rs  match_config.rs  parse_content_to_config.rs
