[package]
name = "sworkstyle"
version = "1.3.9"
authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
edition = "2021"
license = "MIT"
description = "Workspaces with the swayest style! This program will dynamically rename your workspaces to indicate which programs are running in each workspace. It uses the Sway IPC. In the absence of a config file, one will be generated automatically.See ${XDG_CONFIG_HOME}/workstyle/config.yml for  details."
repository = "https://github.com/Lyr-7D1h/swayest_workstyle"
keywords = ["sway", "wayland"]
readme = "README.md"


[dependencies]
swayipc-async = "3.0.0"
async-io = "2.6"
futures-lite = "2.6.1"
toml = { version = "0.9.8", features = ["preserve_order"] }
dirs = "6.0"
log = "0.4.29"
fslock = "0.2.1"
ctrlc = "3.5.2"
regex = "1.12.3"
simple_logger = "5.1.0"
inotify = "0.11"
